[gd_scene load_steps=7 format=2]

[ext_resource path="res://Media/Fonts/Magero.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Menu/SoundMenu/SoundMenu.gd" type="Script" id=2]
[ext_resource path="res://Media/Fonts/default.tres" type="DynamicFont" id=3]
[ext_resource path="res://Media/Audio/Voicelines/hello.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0.352941, 0.0156863, 0, 1 )
font_data = ExtResource( 1 )

[node name="SoundMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_top = 6.36396
margin_right = 160.0
margin_bottom = 18.364
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "Sound"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 0.353554
margin_top = 139.3
margin_right = 62.3536
margin_bottom = 159.3
custom_fonts/font = SubResource( 2 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = 4.85628
margin_top = 118.0
margin_right = 66.8563
margin_bottom = 138.0
custom_fonts/font = SubResource( 2 )
text = "RESET"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 27.7351
margin_top = 39.3513
margin_right = 319.735
margin_bottom = 115.351
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterLabel" type="Label" parent="GridContainer"]
margin_top = 2.0
margin_right = 60.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
text = "Master"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterSlider" type="HSlider" parent="GridContainer"]
margin_left = 64.0
margin_right = 214.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
max_value = 20.0
value = 15.0
tick_count = 10

[node name="MusicSliderLabel" type="Label" parent="GridContainer"]
margin_top = 22.0
margin_right = 60.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Music"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="GridContainer"]
margin_left = 64.0
margin_top = 20.0
margin_right = 214.0
margin_bottom = 36.0
rect_min_size = Vector2( 150, 0 )
max_value = 20.0
value = 15.0
tick_count = 10

[node name="FXLabel" type="Label" parent="GridContainer"]
margin_top = 42.0
margin_right = 60.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 3 )
text = "FX"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FXSlider" type="HSlider" parent="GridContainer"]
margin_left = 64.0
margin_top = 40.0
margin_right = 214.0
margin_bottom = 56.0
rect_min_size = Vector2( 150, 0 )
max_value = 20.0
value = 15.0
tick_count = 10

[node name="VoiceLabel" type="Label" parent="GridContainer"]
margin_top = 62.0
margin_right = 60.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 3 )
text = "Voice"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoiceSlider" type="HSlider" parent="GridContainer"]
margin_left = 64.0
margin_top = 60.0
margin_right = 214.0
margin_bottom = 76.0
rect_min_size = Vector2( 150, 0 )
max_value = 20.0
value = 15.0
tick_count = 10

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Voice"

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="value_changed" from="GridContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/FXSlider" to="." method="_on_FXSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/VoiceSlider" to="." method="_on_VoiceSlider_value_changed"]
